--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,9 +3,13 @@ description: M1 Acquire storage implementation
 version: 0.0.1
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   crypto: ^3.0.3
   path: ^1.9.0
   path_provider: ^2.1.2
+  xml: ^6.5.0
+
+dev_dependencies:
+  test: ^1.25.0
