--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 0.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^6.0.0
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
